<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/nav_home_icon"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_calendar"
            android:icon="@drawable/nav_calendar_icon"
            android:title="@string/title_calendar"/>

    <item
            android:id="@+id/navigation_shelf_read_room_status"
            android:icon="@drawable/nav_study_room_icon"
            android:title="@string/title_shelf_read_room_status"/>

    <item
            android:id="@+id/navigation_replacement_lesson_list"
            android:icon="@drawable/nav_replacement_icon"
            android:title="@string/title_replacement_lesson_list"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/nav_person_icon"
            android:title="@string/title_profile"/>


</menu>
