<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="classInformation"
                type="com.sheldon.bujofe.object.ClassInformation" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@{classInformation.name}"
                tools:text="@string/class_name_demo"
                app:layout_constraintBottom_toBottomOf="@+id/class_remaining"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/class_remaining" />

        <TextView
                android:id="@+id/class_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="4dp"
                android:text="@{String.valueOf(classInformation.classRemaining)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/class_replacement"
                app:layout_constraintStart_toEndOf="@+id/class_name"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/class_remaining_demo" />

        <TextView
                android:id="@+id/class_replacement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{String.valueOf(classInformation.classReplacement)}"
                app:layout_constraintBottom_toBottomOf="@+id/class_remaining"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/class_remaining"
                tools:text="@string/class_replacement_demo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>