<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".profile.ProfileFragment">

        <com.notrika.roundedimage.RoundedImageView
                android:id="@+id/roundedImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dogiii"
                app:cornerRadus="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tx_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/name_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/roundedImageView"
                app:layout_constraintStart_toStartOf="@+id/roundedImageView"
                app:layout_constraintTop_toBottomOf="@+id/roundedImageView"
                tools:text="@string/name_text" />

        <ImageView
                android:id="@+id/img_sep_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:src="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_name" />

        <ImageView
                android:id="@+id/img_sep_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:src="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_class_remaining" />

        <TextView
                android:id="@+id/class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tx_class_name"
                android:textSize="18sp"
                android:fontFamily="@font/noto_sans"
                app:layout_constraintBottom_toBottomOf="@+id/tx_class_remaining"
                app:layout_constraintStart_toStartOf="@+id/img_sep_1"
                app:layout_constraintTop_toTopOf="@+id/tx_class_remaining" />

        <TextView
                android:id="@+id/tx_class_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/tx_class_remaining"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tx_class_replacement"
                app:layout_constraintTop_toBottomOf="@+id/img_sep_1" />

        <TextView
                android:id="@+id/tx_class_replacement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/tx_class_replacement"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tx_class_remaining"
                app:layout_constraintEnd_toEndOf="@+id/img_sep_1"
                app:layout_constraintTop_toTopOf="@+id/tx_class_remaining" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_detail_recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_sep_2"
                tools:listitem="@layout/item_profile_detail" />

        <Button
                android:id="@+id/btn_replacement_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/profile_replacemet_apply"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>