<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="orderedTimes"
                type="com.sheldon.bujofe.object.OrderedTimes" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/third_time_slot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/first_time_slot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@{orderedTimes.firstTimeSlot}"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

        <Button
                android:id="@+id/button"
                android:layout_width="88dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:text="@string/study_room_booked"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/second_time_slot"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
                android:id="@+id/textView9"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@{orderedTimes.secTimeSlot}"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/button4"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

        <Button
                android:id="@+id/button4"
                android:layout_width="88dp"
                android:layout_height="0dp"
                android:text="@string/study_room_booked"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
                android:id="@+id/textView10"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@{orderedTimes.thirdTimeSlot}"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

        <Button
                android:id="@+id/button5"
                android:layout_width="88dp"
                android:layout_height="0dp"
                android:text="@string/study_room_booked"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/button4"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>