<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="reClass"
                type="com.sheldon.bujofe.object.ReClass" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/rounded_reclass_item"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        <TextView
                android:id="@+id/tx_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                android:background="@drawable/rounded_reclass_text_title"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
                android:id="@+id/tx_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/start_time"
                android:background="@drawable/rounded_reclass_text_title"
                app:layout_constraintStart_toStartOf="@+id/tx_class_name"
                app:layout_constraintTop_toBottomOf="@+id/tx_class_name" />

        <TextView
                android:id="@+id/tx_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/end_time"
                android:background="@drawable/rounded_reclass_text_title"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/tx_start_time"
                app:layout_constraintTop_toBottomOf="@+id/tx_start_time" />

        <TextView
                android:id="@+id/tx_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_reclass_text_title"
                android:text="@string/submit_status"
                app:layout_constraintBottom_toBottomOf="@+id/tx_date"
                app:layout_constraintEnd_toStartOf="@+id/status"
                app:layout_constraintTop_toTopOf="@+id/tx_date" />

        <TextView
                android:id="@+id/tx_class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/class_name"
                android:background="@drawable/rounded_reclass_text_title"

                app:layout_constraintStart_toStartOf="@+id/tx_date"
                app:layout_constraintTop_toBottomOf="@+id/tx_date" />

        <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{reClass.date}"
                android:background="@drawable/rounded_reclass_text_context"
                app:layout_constraintBottom_toBottomOf="@+id/tx_date"
                app:layout_constraintStart_toEndOf="@+id/tx_date"
                app:layout_constraintTop_toTopOf="@+id/tx_date"
                tools:text="2019/09/08" />

        <TextView
                android:id="@+id/class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{reClass.className}"
                android:background="@drawable/rounded_reclass_text_context"
                app:layout_constraintBottom_toBottomOf="@+id/tx_class_name"
                app:layout_constraintStart_toEndOf="@+id/tx_class_name"
                app:layout_constraintTop_toTopOf="@+id/tx_class_name"
                tools:text="芙丸英文" />

        <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{reClass.startTime}"
                android:background="@drawable/rounded_reclass_text_context"
                app:layout_constraintBottom_toBottomOf="@+id/tx_start_time"
                app:layout_constraintStart_toEndOf="@+id/tx_start_time"
                app:layout_constraintTop_toTopOf="@+id/tx_start_time"
                tools:text="2 pm" />

        <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{reClass.endTime}"
                android:background="@drawable/rounded_reclass_text_context"
                app:layout_constraintBottom_toBottomOf="@+id/tx_end_time"
                app:layout_constraintStart_toEndOf="@+id/tx_end_time"
                app:layout_constraintTop_toTopOf="@+id/tx_end_time"
                tools:text="8 pm" />

        <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_reclass_text_context"
                android:textColor="@color/Color_White_ffffff"
                android:text="@{reClass.status}"
                app:layout_constraintBottom_toBottomOf="@+id/tx_status"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                tools:text="Approved" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>